--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,8 +10,8 @@
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/language"
-        android:title="@string/change_language"
+        android:id="@+id/settings"
+        android:title="@string/settings"
         app:showAsAction="never"/>
 
     <item
